# canopy

./: .gitignore  Cargo.toml  README.md  build-appimage.sh  canopy.desktop
src/: app.rs  main.rs  render.rs  scanner.rs  treemap.rs  utils.rs
